# minishell

./: .gitignore  CMakeLists.txt  Makefile  bugs.txt  child_status.c  echo  echo.c  env_list.c  env_list_utils.c  env_utils.c  error.c  exebuildin.c  executor.c  executor_utils.c  input.txt  main.c  manual.txt  output.txt  parsing.c  printer.c  readline.supp  readme.md  string_utils.c  temp0  testcases.txt  token.c  utils.c
builtins/: builtins_utils.c  cd.c  echo.c  env.c  env_list.c  exit.c  export_builtin.c  export_builtin_utils.c  pwd.c  unset.c
env_list/: env_list.c  env_utils.c
env_lst/: env_lst.c  env_lst_free.c  env_lst_utils.c  env_lst_utils2.c
executor/: child_process_handler.c  child_status.c  exebuiltins.c  execute_heredoc.c  executor.c  executor_utils.c  file_handler.c  parent_process_handler.c  pipe_utils.c  process_handler.c  process_utils.c  redirections.c  redirections_utils.c  test.c
lexer/: lexer.c  lexer_error.c  lexer_init.c  lexer_utils.c  lexer_utils2.c  lexer_utils3.c  remove_quotes.c
lib/: buildins.h  builtins.h  env_lst.h  executor.h  lexer.h  minishell.h  parsing.h
lib/ft_printf/: Makefile  ft_printf.c  ft_printf.h  ft_utils.c
lib/ft_printf/get_next_line/: get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c
lib/libft/: Makefile  ft_abs.c  ft_atoi.c  ft_atoll.c  ft_bzero.c  ft_calloc.c  ft_count_words.c  ft_fabs.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_max.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_min.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strcat.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  (+12 more)
parsing/: build_lst.c  build_lst_utils.c  build_lst_utils2.c  build_lst_wip.c  check.c  check_expand.c  check_syntax.c  cleanup.c  expand_utils.c  expand_utils2.c  expander.c  handle_operator_utils.c  handle_quotes.c  handle_quotes_utils.c  parsing.c  parsing_free.c  parsing_free2.c  parsing_utils.c  prompt_init.c  redir_copy_utils.c  redir_process.c  redir_struct.c  redir_token.c  redir_token_utils.c  redir_utils.c  redir_utils2.c  signal_handling.c  signal_handling_utils.c  token.c  utils.c  utils_list.c
